--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     height: 100vh;
 }
 
+label {
+  padding: 5px;
+}
+
 .heading {
     display: flex;
     background-color: beige;
@@ -16,7 +20,7 @@ body {
 
 .main {
     display: grid;
-    grid-template: 1fr 6fr /1fr 4fr;
+    grid-template: 1fr 6fr / 1fr 4fr;
     height: 100wh;
     margin: 0px;
     padding: 0px;
@@ -25,16 +29,25 @@ body {
   }
 
 
-  .sidebar-left {
-    grid-row: 1 / 7;
+  .menubar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    grid-row: 1 / 1;
+    grid-column: 1 / 3;
     background-color: #69D2E7;
-    width: 20vw;
     gap: 15%;
+  }
+
+  .newbook {
+    display: flex;
+    flex-direction: row;
   }
 
   .menu {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     padding: 20px;
   }
@@ -49,7 +62,7 @@ body {
     display: flex;
     justify-content: center;
     grid-row: 2 / 3;
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
     padding: 5rem;
   }
 
