--- a/style.css
+++ b/style.css
@@ -61,15 +61,27 @@ label {
   .book-cards {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     grid-row: 2 / 3;
     grid-column: 1 / 3;
-    padding: 5rem;
   }
 
   .book-card {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 20px;
+    padding: 20px;
     flex-direction: row;
+    width: 20vw;
+    height: 10vh;
+    border-radius: 15px;
+
     background-color: #69D2E7;
+  }
+
+  .book-card-left, .book-card-right {
+
   }
 
   .book-table {
