--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ label {
   padding: 5px;
 }
 
+h3 {
+  margin-top: 0px;
+}
+
 .heading {
     display: flex;
     background-color: beige;
@@ -32,17 +36,18 @@ label {
   .menubar {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-content: center;
     grid-row: 1 / 1;
     grid-column: 1 / 3;
     background-color: #69D2E7;
-    gap: 15%;
   }
 
   .newbook {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    
   }
 
   .menu {
@@ -53,6 +58,7 @@ label {
   }
 
   .menu-button {
+    border-radius: 10px;
     margin: 10px;
     padding: 10px;
     width: 80%;
@@ -81,6 +87,26 @@ label {
   }
 
   .book-card-left, .book-card-right {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .book-card-right {
+
+  }
+
+  .btnHaveread, .btnRemove {
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+    width: max-content;
+  }
+
+  .btnHaveread {
+
+  }
+
+  .btnRemove {
 
   }
 
