--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  
+}
 
 body {
     height: 100vh;
@@ -12,20 +17,48 @@ h3 {
   margin-top: 0px;
 }
 
+input[type=text] {
+  padding: 5px;
+  border-radius: 5px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+input:focus {
+  border-style: solid;
+  border: 2px solid #F38630;
+}
+
+input[type=checkbox] {
+  margin-left: 10px;
+}
+
+
+header {
+  height: 10vh;
+}
+
+footer {
+  height: 10vh;
+  background-color: beige;
+}
+
 .heading {
     display: flex;
     background-color: beige;
     justify-content: center;
+    height: 10vh;
 }
 
 .main-heading {
-
+  justify-content: center;
+  align-self: center;
 }
 
 .main {
     display: grid;
     grid-template: 1fr 6fr / 1fr 4fr;
-    height: 100wh;
+    height: 80vh;
     margin: 0px;
     padding: 0px;
     border: 0cm;
@@ -47,7 +80,7 @@ h3 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    
+    padding: 5px;
   }
 
   .menu {
@@ -59,9 +92,16 @@ h3 {
 
   .menu-button {
     border-radius: 10px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     margin: 10px;
     padding: 10px;
     width: 80%;
+  }
+
+  .menu-button:active {
+    transform: translateY(2px);
+    box-shadow: rgba(78, 78, 78, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   }
 
   .book-cards {
@@ -103,7 +143,11 @@ h3 {
   }
 
   .btnHaveread {
+    background-color: green;
+  }
 
+  .btnNotread {
+    background-color: red;
   }
 
   .btnRemove {
