event listener for read/not read button works
remove redundancy, only needed class is added
currently event listener only console.logs
consistent appearance for buttons

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ footer {
 
   }
 
-  .btnHaveread, .btnRemove {
+  .btnHaveread, .btnNotread, .btnRemove {
     border-radius: 10px;
     padding: 10px;
     margin: 5px;
