--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ label {
   padding: 5px;
 }
 
-h3 {
-  margin-top: 0px;
+button {
+  background-color: #F1D4AF;
 }
 
 input[type=text] {
@@ -35,24 +35,31 @@ input[type=checkbox] {
 
 
 header {
-  height: 10vh;
+  
 }
 
 footer {
-  height: 10vh;
-  background-color: beige;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: small;
+  height: 15vh;
+  background-color: #774F38;
+  color: #F1D4AF;
 }
 
 .heading {
     display: flex;
-    background-color: beige;
+    background-color: #C5E0DC;
     justify-content: center;
-    height: 10vh;
+    height: 5vh;
+    
 }
 
 .main-heading {
   justify-content: center;
-  align-self: center;
+  align-self: flex-end;
 }
 
 .main {
@@ -62,7 +69,7 @@ footer {
     margin: 0px;
     padding: 0px;
     border: 0cm;
-    background-color: rgb(255, 180, 95);
+    background-color: #ECE5CE;
   }
 
 
@@ -73,7 +80,8 @@ footer {
     align-content: center;
     grid-row: 1 / 1;
     grid-column: 1 / 3;
-    background-color: #69D2E7;
+    background-color: #C5E0DC;
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
   }
 
   .newbook {
@@ -87,16 +95,13 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 20px;
   }
 
   .menu-button {
     border-radius: 10px;
     border-style: none;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-    margin: 10px;
     padding: 10px;
-    width: 80%;
   }
 
   .menu-button:active {
@@ -119,20 +124,36 @@ footer {
     margin: 20px;
     padding: 20px;
     flex-direction: row;
-    width: 20vw;
-    height: 10vh;
+    width: 25vw;
+    height: min-content;
     border-radius: 15px;
 
-    background-color: #69D2E7;
+    background-color: #E08E79;
   }
 
   .book-card-left, .book-card-right {
     display: flex;
     flex-direction: column;
+    
   }
 
   .book-card-right {
+    
+    width: min-content;
+    align-items: end;
+  }
 
+  .book-card-left. {
+    margin: 10px;
+  }
+  .authorname {
+    font-style: italic;
+    margin-bottom: 5px;
+  }
+
+  .genre {
+    margin-top: 2px;
+    font-size: smaller;
   }
 
   .btnHaveread, .btnNotread, .btnRemove {
@@ -143,18 +164,30 @@ footer {
   }
 
   .btnHaveread {
+    width: 80px;
+    border-radius: 10px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    margin: 10px;
+    padding: 10px;
     background-color: green;
   }
 
   .btnNotread {
+    width: 80px;
+    border-radius: 10px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    margin: 10px;
+    padding: 10px;
     background-color: red;
   }
 
   .btnRemove {
-
-  }
-
-  .book-table {
-    border: solid 1px #69D2E7;
-
+    width: 80px;
+    border-radius: 10px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    margin: 10px;
+    padding: 10px;
   }
